# bitssh

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: greetings.yml  lint.yml  publish-to-pypi.yml  publish_dockerhub.yml  test.yml
docs/: docs.md  install.md  usage.md
src/: __init__.py  bitssh.py  core.py  utils.py
src/bitssh/: __init__.py  __main__.py  argument_parser.py  cli.py  core.py  prompt.py  ui.py  utils.py
tests/: conftest.py  test_utils.py  test_utils_v2.py
tests/data/: config_case_insensitive.txt  config_complex.txt  config_data.txt  config_defaults.txt  config_duplicate.txt  config_empty_and_only_comments.txt  config_incomplete.txt  config_inline_comments.txt  config_malformed.txt  config_mixed_case.txt  config_special_chars.txt  config_whitespace.txt  config_wildcard_filtering.txt  config_with_indentations.txt  config_with_ports.txt
